--- a/app/public/css/index.css
+++ b/app/public/css/index.css
@@ -3,9 +3,16 @@
   margin: 0;
 }
 
-body,
 html {
   height: 100%;
+}
+
+body {
+  min-height: 100%;
+  display: grid;
+  grid-template-rows: 1fr auto;
+  grid-template-columns: 1fr;
+  font-family: "Montserrat", sans-serif;
 }
 
 .search {
@@ -15,7 +22,9 @@ html {
   flex-direction: column;
   padding: 0 16px;
   margin: auto;
-  height: 90%;
+  align-self: center;
+  justify-self: center;
+  width: 100%;
 }
 .search__input {
   position: relative;
@@ -25,9 +34,14 @@ html {
 .search__input input {
   padding-left: 18px;
   width: 100%;
+  max-width: 820px;
   height: 56px;
   border: 1px solid rgba(0, 0, 0, 0.2);
   border-radius: 5px;
+  outline: none;
+}
+.search__input input:focus {
+  border: 1px solid rgba(0, 0, 0, 0.3);
 }
 .search__input button {
   position: absolute;
@@ -49,14 +63,18 @@ html {
   border-radius: 5px;
   margin-top: 32px;
   font-size: 16px;
-  font-weight: bold;
+  font-weight: 700;
+  font-family: "Montserrat", sans-serif;
   width: 156px;
+}
+.search__btn:active {
+  transform: scale(0.9);
 }
 .search__img {
   width: 172px;
   max-width: 335px;
 }
-@media (min-width: 768px) {
+@media screen and (min-width: 768px) {
   .search__input {
     width: 700px;
   }
@@ -66,7 +84,50 @@ html {
 }
 
 .footer {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  justify-self: center;
+  margin-bottom: 30px;
+}
+.footer * {
+  display: block;
+}
+
+.github-description {
+  justify-self: flex-end;
+  padding-right: 15px;
+}
+.github-description__card--title {
+  display: none;
+}
+.github-description__logo {
+  cursor: pointer;
+}
+@media screen and (min-width: 1200px) {
+  .github-description {
+    display: flex;
+    width: 100%;
+    max-width: 1200px;
+    margin: 0 auto;
+    justify-content: flex-end;
+  }
+  .github-description__card {
+    display: grid;
+    grid-template-rows: 1fr 1fr;
+    grid-template-columns: repeat(3, 1fr);
+    width: 328px;
+    height: 187px;
+    padding: 12px;
+    border-radius: 5px;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.16);
+  }
+  .github-description__card--title {
+    display: block;
+    grid-column: 1/3;
+    grid-row: 1/3;
+  }
+  .github-description__card .github-description__logo {
+    grid-column: 3/4;
+    grid-row: 2;
+    align-self: end;
+    justify-self: end;
+  }
 }
