--- a/app/public/sass/_base.scss
+++ b/app/public/sass/_base.scss
@@ -3,7 +3,14 @@
   margin: 0;
 }
 
-body,
 html {
   height: 100%;
+}
+
+body {
+  min-height: 100%;
+  display: grid;
+  grid-template-rows: 1fr auto;
+  grid-template-columns: 1fr;
+  font-family: 'Montserrat', sans-serif;
 }
