--- a/app/public/sass/components/_footer.scss
+++ b/app/public/sass/components/_footer.scss
@@ -1,5 +1,8 @@
 .footer {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  justify-self: center;
+  margin-bottom: 30px;
+
+  * {
+    display: block;
+  }
 }
