--- a/app/public/sass/index.scss
+++ b/app/public/sass/index.scss
@@ -8,3 +8,5 @@
 @import 'components/search';
 @import 'components/footer';
 @import 'components/github-description';
+@import 'components/search-result';
+@import 'components/playlists';
