--- a/app/public/sass/components/_github-description.scss
+++ b/app/public/sass/components/_github-description.scss
@@ -1,6 +1,7 @@
 .github-description {
   justify-self: flex-end;
   padding-right: 15px;
+  align-self: end;
 
   &__card {
     &--title {
@@ -10,6 +11,10 @@
   
   &__logo {
     cursor: pointer;
+  }
+
+  &.result-list {
+    display: none;
   }
 
   @include lg {
