Including thumbnailSrc and updatedAt on playlists endpoint

--- a/app/public/css/index.css
+++ b/app/public/css/index.css
@@ -209,6 +209,7 @@ body {
   font-size: 14px;
   text-decoration: none;
   color: #202020;
+  margin-bottom: 16px;
 }
 .playlists .card__img {
   width: 132px;
