--- a/app/public/sass/components/_playlists.scss
+++ b/app/public/sass/components/_playlists.scss
@@ -13,6 +13,7 @@
         font-size: 14px;
         text-decoration: none;
         color: #202020;
+        margin-bottom: 16px;
 
         &__img {
             width: 132px;
