Modal for creating notion page

--- a/app/public/sass/_base.scss
+++ b/app/public/sass/_base.scss
@@ -11,5 +11,5 @@ body {
   min-height: 100%;
   display: flex;
   flex-direction: column;
-  font-family: 'Montserrat', sans-serif;
+  font-family: $base-font;
 }
