--- a/app/public/sass/index.scss
+++ b/app/public/sass/index.scss
@@ -1,4 +1,5 @@
 @import 'colors';
+@import 'fonts';
 
 // base & layout
 @import 'base';
@@ -10,3 +11,4 @@
 @import 'components/github-description';
 @import 'components/search-result';
 @import 'components/playlists';
+@import 'components/modal';
