--- a/app/public/sass/components/_github-description.scss
+++ b/app/public/sass/components/_github-description.scss
@@ -2,6 +2,8 @@
   justify-self: flex-end;
   padding-right: 15px;
   align-self: end;
+  padding-right: 64px;
+  margin-bottom: 16px;
 
   &__card {
     &--title {
@@ -17,35 +19,39 @@
     display: none;
   }
 
-  @include lg {
+  @include md {
     display: flex;
     width: 100%;
-    max-width: 1200px;
-    margin: 0 auto;
+    max-width: 1500px;
     justify-content: flex-end;
 
     &__card {
       display: grid;
-      grid-template-rows: 1fr 1fr;
-      grid-template-columns: repeat(3, 1fr);
-      width: 328px;
+      grid-template-rows: 1fr;
+      grid-template-columns: repeat(2, 1fr);
+      width: 400px;
       height: 187px;
       padding: 12px;
       border-radius: 5px;
       box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.16);
   
       &--title {
+        padding-right: 24px;
+        text-align: justify;
         display: block;
         grid-column: 1 / 3;
         grid-row: 1 / 3;
+        justify-content: center;
+        align-self: center;
       }
-  
-      .github-description__logo {
-        grid-column: 3 / 4;
-        grid-row: 2;
-        align-self: end;
-        justify-self: end;
-      }
+    }
+    
+    &__logo {
+      width: 70px;
+      height: 70px;
+      grid-column: 3 / 4;
+      align-self: center;
+      justify-self: center;
     }
   }
 }
