--- a/app/public/sass/components/_modal.scss
+++ b/app/public/sass/components/_modal.scss
@@ -48,6 +48,7 @@
         border-radius: 5px;
         border: none;
         font-family: $base-font;
+        cursor: pointer;
 
         &--primary {
             background-color: #202020;
