--- a/app/public/sass/components/_search.scss
+++ b/app/public/sass/components/_search.scss
@@ -68,21 +68,11 @@
     max-width: 335px;
   }
 
-  @include md {
-    &__input {
-      width: 700px;
-    }
-
-    &__img {
-      width: 100%;
-    }
-  }
-
   &.result-list {
     margin: 6px 17px 0px 17px;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-  
+
     .github-description__logo {
       display: block;
       width: 30px;
@@ -106,7 +96,40 @@
       &__btn {
         display: none;
       }
+    }
+  }
 
+  @include md {
+    &.result-list {
+      margin-left: 64px;
+
+      .github-description__logo {
+        display: none;
+      }
+
+      .search__img {
+        display: none;
+      }
+    }
+
+    &__input {
+      width: 700px;
+    }
+
+    &__img {
+      width: 100%;
+    }
+
+    &__input {
+      @include md {
+        max-width: 820px;
+      }
+    }
+  }
+
+  @include lg {
+    &.result-list {
+      margin-left: 300px;
     }
   }
 }
