First header version

--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -25,3 +25,9 @@ body {
   background-color: var(--secondary-color);
   transition: background 2s;
 }
+
+.container {
+  width: 100%;
+  max-width: 1440px;
+  margin: 0 auto;
+}
