--- a/client/src/app/components/header/header.component.html
+++ b/client/src/app/components/header/header.component.html
@@ -2,7 +2,7 @@
   <div class="header__container container">
     <a routerLink="/">
       <img
-        src="assets/images/header-logo-{{ (isDarkMode$ | async) ? 'dark' : 'light' }}.svg"
+        src="assets/images/logo-{{ (isDarkMode$ | async) ? 'dark' : 'light' }}.svg"
         alt="Youtube & Notion logo">
     </a>
 
