--- a/client/src/app/components/search/search.component.html
+++ b/client/src/app/components/search/search.component.html
@@ -1,5 +1,5 @@
 <label for="search" class="search">
-  <img class="search__img" src="/assets/images/search.svg" alt="Search logo">
+  <img class="search__img" src="assets/images/search.svg" alt="Search logo">
   <input
      class="search__input"
      type="text"
