Hotfix - Home logo with light and dark theme changes

--- a/client/src/app/pages/home/home.component.html
+++ b/client/src/app/pages/home/home.component.html
@@ -1,7 +1,7 @@
 <section class="home">
   <img
     class="home__logo"
-    src="assets/images/logo-light.svg"
+    src="assets/images/logo-{{ (isDarkMode$ | async) ? 'dark' : 'light' }}.svg"
     alt="Youtube & Notion logo">
 
   <form
