Improvements to detail card component

--- a/client/src/app/pages/home/home.component.html
+++ b/client/src/app/pages/home/home.component.html
@@ -19,7 +19,7 @@
   </form>
 </section>
 
-<section class="content github-detail">
+<section class="github-detail">
   <app-detail></app-detail>
 </section>
 
