Footer and improvements on detail card position

--- a/client/src/app/pages/home/home.component.html
+++ b/client/src/app/pages/home/home.component.html
@@ -23,3 +23,8 @@
   <app-detail></app-detail>
 </section>
 
+<footer class="footer">
+  <p>DEV. by <a href="https://www.linkedin.com/in/cggomes/" target="_blank">Christian</a></p>
+  <p>UXD. by <a href="https://www.linkedin.com/in/pamela-nikole/">Pâmela</a></p>
+</footer>
+
